--- a/index.html
+++ b/index.html
@@ -1,79 +1,164 @@
-<!DOCTYPE html>
 <html>
+<head>
+  <title>FOAF Vocabulary Specification</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet"  type="text/css" />
+  <link href="http://smiy.sourceforge.net/css/style.css" rel="stylesheet"  type="text/css" />
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="http://www.kanzaki.com/parts/turtle.js"></script>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Cco : Crop Characterization Ontology" />
+<script>
+// need this function
+if (typeof String.prototype.startsWith != 'function') {
+  String.prototype.startsWith = function (str){
+    return this.slice(0, str.length) == str;
+  };
+}
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+function MustacheRDF(rdf, ns) {
+  this.rdf = rdf;
+  this.ns = ns;
 
-    <title>Cco</title>
-  </head>
+  this.reg = /{{(.*?)}}/g; // this is for curly brackets
 
-  <body>
+  this.init();
+}
+MustacheRDF.prototype.init = function() {
+  var that = this;
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/bioversity/cco">View on GitHub</a>
+  // replace all instance of curly
+  var replaced = $('body').html().replace(this.reg, function() {
+    var triple = arguments[1]; 
 
-          <h1 id="project_title">Cco</h1>
-          <h2 id="project_tagline">Crop Characterization Ontology</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/bioversity/cco/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/bioversity/cco/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Cco maintained by <a href="https://github.com/bioversity">bioversity</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    var obj = that.findPattern(triple);
     
+    return obj;
+  });
 
-  </body>
+  $('body').html(replaced);
+}
+
+MustacheRDF.prototype.expandTriple = function(triple) {
+  // break it into triples, they're separated by space
+  var tripleArr = triple.split(' ');
+
+  // for each triple, see if it starts with a namespace in this.ns
+  for(var i in tripleArr) {
+
+    for(var n in this.ns) {
+      if(tripleArr[i].startsWith(n)) {
+        tripleArr[i] = tripleArr[i].replace(n, this.ns[n], 'g'); 
+        break;
+      }
+    }
+  }
+  return tripleArr;
+}
+MustacheRDF.prototype.findTriple = function(triple) {
+
+  var arg = ['subject', 'predicate', 'object'];
+
+  // supporting only 1 arg for now
+  for(var x in triple) {
+    if(triple[x].startsWith('?')) {
+      arg = arg[x];
+      break;
+    }
+  }
+
+  for(var i in this.rdf) {
+    var subject = this.rdf[i].subject;
+    var predicate = this.rdf[i].predicate;
+    var object = this.rdf[i].object;
+
+    if(
+      (triple[0].startsWith('?') || triple[0] == subject)
+      &&
+      (triple[1].startsWith('?') || triple[1] == predicate)
+      &&
+      (triple[2].startsWith('?') || triple[2] == object)
+    ){
+      // matched
+      return this.rdf[i][arg];
+
+    }
+
+  }
+
+}
+
+MustacheRDF.prototype.findPattern = function(triple) {
+  var tripleArr = this.expandTriple(triple);
+
+  var obj = this.findTriple(tripleArr);
+  return obj;
+}
+
+
+$(function(){
+  
+  var url = 'https://api.github.com/repos/bioversity/cco/contents/cco.ttl?callback=?';
+
+  $.getJSON(url, function(data) {
+    // atob() breaks with newlines, so remove them
+    var ttl = atob(data.data.content.replace(/\s/g, ''));
+
+    var turtle = new ParseTurtle();
+
+    // do parsing and get namespaces
+    var rdf = turtle.parse(ttl);
+    var ns = turtle.ns;
+
+    // now, with these two piece of info.
+    // use jquery to find {{..}} elements
+    // and modify them directly
+    new MustacheRDF(rdf, ns);
+
+  })  
+});
+
+</script>
+
+</head>
+
+<body>
+  <h1>{{cco: dc:title ?o}} {{cco: dc:hasVersion ?o}}<br /></h1>
+
+  <h2>Namespace Document 9 August 2010 - <em>Marco Polo Edition</em></h2>
+
+  <dl>
+    <dt>This version:</dt>
+    <dd><a href="http://xmlns.com/foaf/spec/20100809.html">http://xmlns.com/foaf/spec/20100809.html</a> (<a href="20100809.rdf">rdf</a>, <a href="http://wiki.foaf-project.org/w/FoafSpec20100809">wiki</a>)</dd>
+
+    <dt>Latest version:</dt>
+    <dd><a href="http://xmlns.com/foaf/spec/">http://xmlns.com/foaf/spec/</a> (<a href="index.rdf">rdf</a>, <a href="http://wiki.foaf-project.org/w/">wiki</a>)</dd>
+
+    <dt>Previous version:</dt>
+    <dd><a href="http://xmlns.com/foaf/spec/20100101.html">http://xmlns.com/foaf/spec/20100101.html</a> (<a  href="20100101.rdf">rdf</a>, <a href="http://wiki.foaf-project.org/w/FoafSpec20100101.html">wiki</a>)</dd>
+    <dt>Authors:</dt>
+    <dd><a href="mailto:danbri@danbri.org">Dan Brickley</a>,
+    <a href="mailto:libby@nicecupoftea.org">Libby Miller</a></dd>
+
+    <dt>Contributors:</dt>
+
+    <dd>Members of the FOAF mailing list (<a href=
+    "http://lists.foaf-project.org/">foaf-dev@lists.foaf-project.org</a>)
+    and the wider <a href="http://www.w3.org/2001/sw/interest/">RDF
+    and Semantic Web developer community</a>. See <a href=
+    "#sec-ack">acknowledgements</a>.</dd>
+  </dl>
+
+  <p class="copyright">Copyright &#169; 2000-2010 Dan Brickley and Libby Miller</p>
+  <div about=""  resource="http://www.w3.org/TR/rdfa-syntax"  rel="dct:conformsTo" />
+  <p about=""><a href="http://validator.w3.org/check?uri=referer"><img style="border: 0; float: right; padding: 5px;" 
+        src="http://www.w3.org/Icons/valid-xhtml-rdfa-blue"   alt="Valid XHTML + RDFa"  /></a>
+
+  <!-- Creative Commons License -->
+   <a href="http://creativecommons.org/licenses/by/1.0/"></a> This work is licensed under a <a  rel="license" href= 
+  "http://creativecommons.org/licenses/by/1.0/">Creative Commons Attribution License</a>. This copyright applies to the <em>FOAF Vocabulary Specification</em> and accompanying documentation in RDF. Regarding underlying technology, FOAF uses W3C's <a href="http://www.w3.org/RDF/">RDF</a> technology, an open Web standard that can be freely used by anyone.</p>
+  
+  <hr />
+
+</body>
 </html>
+
