--- a/index.html
+++ b/index.html
@@ -224,6 +224,24 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 </p>
 </div>
 
+<hr />
+
+<h2>{{cco: dc:title ?o}}: Classes and Properties</h2>
+
+<br>
+
+{{#?s a rdf:Property}}
+<div class="specterm" id="term_Activity"><h3>Property: </h3>
+  <em>{{?s rdfs:label ?label}}</em>
+   - {{?s rdfs:comment ?comment}}<br>
+       
+  <br>
+  <p style="float: right; font-size: small;">[<a href="#glance">back to top</a>]</p>
+
+</div>
+{{/}}
+
+
 
 
 </body>
