--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@ $(function(){
 
     <td>
 	<table style="border:2px dashed #FFCC00; font-size:small; padding:10px;" width="400" border="0" align="center">
+  <center>
+    <a href="{{cco: rdfs:seeAlso ?o}}"><img width="300" src="http://www.agrobiodiversity.org/files/cco-logo.png" /></a>
+  </center>
 
                   <tbody><tr>
                         <td rowspan="2">
@@ -207,7 +210,7 @@ $(function(){
                         <td align="center"><b>Music Ontology Github project</b></td>
 		</tr>
 		<tr><td align="center">
-			<a href="https://github.com/motools">Source code, Tools</a></td>
+			<a href="https://github.com/bioversity/cco">Source code, Tools</a></td>
                 </tr>
                   <tr>
 
@@ -236,7 +239,7 @@ $(function(){
 
   <!-- Creative Commons License -->
    <a href="http://creativecommons.org/licenses/by/1.0/"></a> This work is licensed under a <a  rel="license" href= 
-  "http://creativecommons.org/licenses/by/1.0/">Creative Commons Attribution License</a>. This copyright applies to the <em>FOAF Vocabulary Specification</em> and accompanying documentation in RDF. Regarding underlying technology, FOAF uses W3C's <a href="http://www.w3.org/RDF/">RDF</a> technology, an open Web standard that can be freely used by anyone.</p>
+  "http://creativecommons.org/licenses/by/1.0/">Creative Commons Attribution License</a>. This copyright applies to the <em>{{cco: dc:title ?o}}</em> and accompanying documentation in RDF. Regarding underlying technology, {{cco: dc:title ?o}} uses W3C's <a href="http://www.w3.org/RDF/">RDF</a> technology, an open Web standard that can be freely used by anyone.</p>
   
   <hr />
 
