--- a/static.html
+++ b/static.html
@@ -3,11 +3,15 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet" type="text/css">
   <link href="http://smiy.sourceforge.net/css/style.css" rel="stylesheet" type="text/css">
+  
+  
+
+
 
 </head>
 
 <body style="">
-  <h1>The Crop Characterization Ontology, <small>Revision: 0.1</small><br></h1>
+  <h1><span class="title">The Crop Characterization Ontology</span>, <small>Revision: 0.1</small><br></h1>
 
 <table width="100%" border="0">
   <tbody><tr>
@@ -79,7 +83,7 @@
     
 
     <td>
-  <center>
+	<center>
     <a href="http://www.bioversityinternational.org/e-library/publications/categories/descriptors/"><img width="300" src="http://www.agrobiodiversity.org/files/cco-logo.png"></a>
   </center><table style="border:2px dashed #FFCC00; font-size:small; padding:10px;" width="400" border="0" align="center">
   
@@ -89,9 +93,9 @@
                         <img src="https://github.global.ssl.fastly.net/images/modules/logos_page/GitHub-Logo.png" width="120" alt="Github">
                         </td>
                         <td align="center"><b>Music Ontology Github project</b></td>
-    </tr>
-    <tr><td align="center">
-      <a href="https://github.com/bioversity/cco">Source code, Tools</a></td>
+		</tr>
+		<tr><td align="center">
+			<a href="https://github.com/bioversity/cco">Source code, Tools</a></td>
                 </tr>
                   <tr>
 
@@ -108,7 +112,7 @@
 
                   </tr>
                 </tbody></table>
-  
+	
     </td>
   </tr>
 
@@ -197,84 +201,84 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 <br>
 
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#leafHabitMusa"><h3>Property: Leaf habit</h3>
+<div class="specterm" id="leafHabitMusa"><h3>Property: Leaf habit</h3>
    1 Erect<br>2 Intermediate<br>3 Drooping<br>4 Other (e.g. very drooping, specify in descriptor Notes, 6.8)
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/leafHabit.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#dwarfismMusa"><h3>Property: Dwarfism</h3>
+<div class="specterm" id="dwarfismMusa"><h3>Property: Dwarfism</h3>
    1 Normal: leaves not overlapped and leaf ratio inferior to 2.5<br>2 Dwarf type: leaves strongly overlapped and leaf ratio superior<br>to 2.5
    <br>
    <br>
    
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#pseudostemHeightMusa"><h3>Property: Pseudostem height [m]</h3>
+<div class="specterm" id="pseudostemHeightMusa"><h3>Property: Pseudostem height [m]</h3>
    Recorded from the base of pseudostem to emerging point of the peduncle<br>1 ≤2<br>2 2.1 to 2.9<br>3 ≥3
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#pseudostemAspectMusa"><h3>Property: Pseudostem aspect</h3>
+<div class="specterm" id="pseudostemAspectMusa"><h3>Property: Pseudostem aspect</h3>
    Determined by the circumference at 100 cm<br>1 Slender<br>2 Normal<br>3 Robust
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#pseudostemColourMusa"><h3>Property: Pseudostem colour</h3>
+<div class="specterm" id="pseudostemColourMusa"><h3>Property: Pseudostem colour</h3>
    Recorded without removing the external sheaths. The colour of oldest dry sheaths should not be considered.<br>1 Green-yellow<br>2 Medium green<br>3 Green<br>4 Dark green<br>5 Green-red<br>6 Red<br>7 Red-purple<br>8 Blue<br>9 Chimerical<br>10 Other
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#pseudostemAppearanceMusa"><h3>Property: Pseudostem appearance</h3>
+<div class="specterm" id="pseudostemAppearanceMusa"><h3>Property: Pseudostem appearance</h3>
    Recorded as in cco:pseudostemColourMusa<br>1 Dull (waxy)<br>2 Shiny (not waxy)
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#predominantUnderlyingColourPseudostemMusa"><h3>Property: Predominant underlying colour of the pseudostem</h3>
+<div class="specterm" id="predominantUnderlyingColourPseudostemMusa"><h3>Property: Predominant underlying colour of the pseudostem</h3>
    Remove the outermost sheath from the pseudostem and look at the exposed surface<br>of the underlying pseudostem. The values 5 (pink-purple), 6 (red-purple) and 7<br>(purple) must be chosen only if the pigmentation is uniform, and green tinges are<br>not observed.<br>1 Watery green<br>2 Light green<br>3 Green<br>4 Cream<br>5 Pink-purple<br>6 Red-purple<br>7 Purple<br>8 Other
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#pigmentationUnderlyingPseudostemMusa"><h3>Property: Pigmentation of the underlying pseudostem</h3>
+<div class="specterm" id="pigmentationUnderlyingPseudostemMusa"><h3>Property: Pigmentation of the underlying pseudostem</h3>
    Record the tinge of pigmentation, even if it is only noticeable in places.<br>1 Pink-purple<br>2 Red<br>3 Purple<br>4 Other
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#sapColourMusa"><h3>Property: Sap colour</h3>
+<div class="specterm" id="sapColourMusa"><h3>Property: Sap colour</h3>
    Cut the external sheath of pseudostem and record the characteristics of the sap.<br>1 Watery<br>2 Milky<br>3 Red-purple<br>4 Other
    <br>
    <br>
    
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#waxLeafSheathsMusa"><h3>Property: Wax on leaf sheaths</h3>
+<div class="specterm" id="waxLeafSheathsMusa"><h3>Property: Wax on leaf sheaths</h3>
    1 Very little or no visible sign of wax<br>2 Very few wax<br>3 Moderately waxy<br>4 Very waxy
    <br>
    <br>
    
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#numberOfSuckersMusa"><h3>Property: Number of suckers</h3>
+<div class="specterm" id="numberOfSuckersMusa"><h3>Property: Number of suckers</h3>
    Record the number of suckers from soil level to point of emergence of the last leaf<br>(&gt;30 cm height). Recorded only if no desuckering has taken place
    <br>
    <br>
    
 </div>
 
-<div class="specterm" id="http://data.agrobiodiversity.org/cco#developmentOfSuckersMusa"><h3>Property: Development of suckers</h3>
+<div class="specterm" id="developmentOfSuckersMusa"><h3>Property: Development of suckers</h3>
    RIn relation to the parent plant. Observed on the tallest sucker. Recorded at harvest<br>time<br>1 Taller than parent plant<br>2 More than 3/4 of the height of the parent plant<br>3 Between 1/4 and 3/4 of the height of the parent plant<br>4 Inhibited
    <br>
    <br>
@@ -292,3 +296,4 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 
 
 </div></body></html>
+
