--- a/static.html
+++ b/static.html
@@ -139,6 +139,19 @@
 property and by individuals. All the terms are hyperlinked to their detailed description for quick reference.</p>
 
 <div class="glance" id="glance">
+<p>Classes: 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#Characterization">Characterization of crops</a> 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#Musa">Musa spp.</a> 
+
+
+
+</p>
 <p>Properties: 
 
 
@@ -191,6 +204,26 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 
 
 
+  | <a href="http://data.agrobiodiversity.org/cco#positionOfSuckersMusa">Position of suckers</a> 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#blotchesPetioleBaseMusa">Blotches at the petiole base</a> 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#blotchesColourMusa">Blotches colour</a> 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#petioleCanalLeafIIIMusa">Petiole canal leaf III</a> 
+
+
+
+  | <a href="http://data.agrobiodiversity.org/cco#petioleMarginsMusa">Petiole margins</a> 
+
+
+
 </p>
 </div>
 
@@ -201,17 +234,63 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 <br>
 
 
+<div class="specterm" id="Characterization"><h3>Class: Characterization of crops</h3>
+   Characterization of crops
+   <br><br>
+
+</div>
+
+<div class="specterm" id="Musa"><h3>Class: Musa spp.</h3>
+   Musa spp.
+   <br><br>
+
+</div>
+
+
+
 <div class="specterm" id="leafHabitMusa"><h3>Property: Leaf habit</h3>
    1 Erect<br>2 Intermediate<br>3 Drooping<br>4 Other (e.g. very drooping, specify in descriptor Notes, 6.8)
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/leafHabit.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="dwarfismMusa"><h3>Property: Dwarfism</h3>
    1 Normal: leaves not overlapped and leaf ratio inferior to 2.5<br>2 Dwarf type: leaves strongly overlapped and leaf ratio superior<br>to 2.5
    <br>
    <br>
+   
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
    
 </div>
 
@@ -220,6 +299,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="pseudostemAspectMusa"><h3>Property: Pseudostem aspect</h3>
@@ -227,6 +322,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="pseudostemColourMusa"><h3>Property: Pseudostem colour</h3>
@@ -234,6 +345,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="pseudostemAppearanceMusa"><h3>Property: Pseudostem appearance</h3>
@@ -241,6 +368,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="predominantUnderlyingColourPseudostemMusa"><h3>Property: Predominant underlying colour of the pseudostem</h3>
@@ -248,6 +391,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="pigmentationUnderlyingPseudostemMusa"><h3>Property: Pigmentation of the underlying pseudostem</h3>
@@ -255,12 +414,44 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    <img src="http://www.agrobiodiversity.org/files/PseudostemSuckers.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="sapColourMusa"><h3>Property: Sap colour</h3>
    Cut the external sheath of pseudostem and record the characteristics of the sap.<br>1 Watery<br>2 Milky<br>3 Red-purple<br>4 Other
    <br>
    <br>
+   
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
    
 </div>
 
@@ -269,6 +460,22 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="numberOfSuckersMusa"><h3>Property: Number of suckers</h3>
@@ -276,12 +483,159 @@ property and by individuals. All the terms are hyperlinked to their detailed des
    <br>
    <br>
    
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
 </div>
 
 <div class="specterm" id="developmentOfSuckersMusa"><h3>Property: Development of suckers</h3>
-   RIn relation to the parent plant. Observed on the tallest sucker. Recorded at harvest<br>time<br>1 Taller than parent plant<br>2 More than 3/4 of the height of the parent plant<br>3 Between 1/4 and 3/4 of the height of the parent plant<br>4 Inhibited
+   In relation to the parent plant. Observed on the tallest sucker. Recorded at harvest<br>time<br>1 Taller than parent plant<br>2 More than 3/4 of the height of the parent plant<br>3 Between 1/4 and 3/4 of the height of the parent plant<br>4 Inhibited
    <br>
    <br>
+   
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
+</div>
+
+<div class="specterm" id="positionOfSuckersMusa"><h3>Property: Position of suckers</h3>
+   1 Far from parent plant (emerging &gt;50 cm from parent plant)<br>2 Close to parent (vertical growth)<br>3 Close to parent (growing at an angle)
+   <br>
+   <br>
+   
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
+</div>
+
+<div class="specterm" id="blotchesPetioleBaseMusa"><h3>Property: Blotches at the petiole base</h3>
+   Recorded on the third, fully unfolded leaf counting down from the top of the plant.<br>    <br>1 Sparse blotching<br>2 Small blotches<br>3 Large blotches<br>4 Extensive pigmentation<br>5 Without pigmentation
+   <br>
+   <br>
+   <img src="http://www.agrobiodiversity.org/files/PetioleMidribLeaf.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
+</div>
+
+<div class="specterm" id="blotchesColourMusa"><h3>Property: Blotches colour</h3>
+   1 Brown<br>2 Dark brown<br>3 Brown-black<br>4 Black-purple<br>5 Other
+   <br>
+   <br>
+   <img src="http://www.agrobiodiversity.org/files/PetioleMidribLeaf.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
+</div>
+
+<div class="specterm" id="petioleCanalLeafIIIMusa"><h3>Property: Petiole canal leaf III</h3>
+   Leaf III is the third leaf counted from the last leaf (leaf I) produced before bunch<br>emergence. Cut the petiole half way between the pseudostem and the leaf blade<br>and examine the cross section.<br><br>1 Open with margins spreading<br>2 Wide with erect margins<br>3 Straight with erect margins<br>4 Margins curved inward<br>5 Margins overlapping
+   <br>
+   <br>
+   <img src="http://www.agrobiodiversity.org/files/petioleCanalLeafIIIMusa.png">
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
+   
+</div>
+
+<div class="specterm" id="petioleMarginsMusa"><h3>Property: Petiole margins</h3>
+   1 Winged and undulating<br>2 Winged and not clasping the pseudostem<br>3 Winged and clasping the pseudostem<br>4 Not winged and clasping the pseudostem<br>5 Not winged and not clasping the pseudostem
+   <br>
+   <br>
+   
+   <br><br>
+
+  <table style="th { float: top; }">
+  <tbody>
+    <tr>
+    <th>Domain:</th>
+    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
+
+    </tr>
+
+    <tr>
+    <th>Range:</th>
+    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
+    </tr>
+  </tbody></table>
    
 </div>
 
