--- a/static.html
+++ b/static.html
@@ -92,7 +92,7 @@
                         <td rowspan="2">
                         <img src="https://github.global.ssl.fastly.net/images/modules/logos_page/GitHub-Logo.png" width="120" alt="Github">
                         </td>
-                        <td align="center"><b>Music Ontology Github project</b></td>
+                        <td align="center"><b>Crop Characterization Ontology Github project</b></td>
 		</tr>
 		<tr><td align="center">
 			<a href="https://github.com/bioversity/cco">Source code, Tools</a></td>
